2003-05-09

	* local/ucf-cf-ppc-macosx-2.mk: enable ucsim, it compiles cleanly with g++2

2003-05-08  Bernhard Held <bernhard@bernhardheld.de>

	* support/error-filter.sh: filter messages from CVS retries

2003-05-07  Bernhard Held <bernhard@bernhardheld.de>

	* lib/ports.mk: don't include ports/z80.mk and ports/gbz80.mk.
	This only disables the checkout of maccer, gbdk-lib and gbdk-support,
	there was no further functionality.

2003-05-06  Bernhard Held <bernhard@bernhardheld.de>

	* lib/fetch.mk: sdcc checkout with retry
	* components/sdcc-extra: sdcc-extra checkout with retry
	* components/sdcc.mk: removed MAKEJOBFLAGS for parallel build of regression tests;
	needs more testing on CF (creating DIRs, timeouts).
	Cleanup installing docs for mingw32

2003-05-05  Bernhard Held <bernhard@bernhardheld.de>

	* sdcc-build-bootstrap.sh: retry `CVS co` in case of failure
	* lib/bootstrap.mk: added chmod to make sdcc-build-bootstrap.sh executable
	* components/sdcc.mk: added MAKEJOBFLAGS for parallel build of regression tests

2003-05-01  Bernhard Held <bernhard@bernhardheld.de>

	* local/ucf-cf-ppc-macosx-2.mk: added

2003-04-28  Bernhard Held <bernhard@bernhardheld.de>

	* lib/src-archive.mk: added directory sdcc to root of archive

2003-04-24  Bernhard Held <bernhard@bernhardheld.de>

	* components/sdcc.mk: removed "SDCCCONFIGUREFLAGS += --program-suffix=$(EXEEXTENSION)"
	after introducing EXEEXT

2003-04-23  Bernhard Held <bernhard@bernhardheld.de>

        * local/usf-cf-x86-linux-1-i586-mingw32msvc.mk: added SDCCINSTALLFLAGS
	for docdir
	* components/sdcc.mk: use SDCCINSTALLFLAGS when installing
	
2003-04-22  Bernhard Held <bernhard@bernhardheld.de>

	* local/usf-cf-x86-linux-1-i586-mingw32msvc.mk: adapted to new configure

2003-04-12  Bernhard Held <bernhard@bernhardheld.de>

	* components/sdcc.mk: SDCC_DIR renamed to SDCC_HOME
	remove share/sdcc for mingw32

2003-04-01  Bernhard Held <bernhard@bernhardheld.de>
