@@ -2,6 +2,56 @@
 # Simple shell script that knows enough to download the sdcc build scripts
 # and start them running.
 
+# A lockfile ensures, that the cronjobs of the different hosts don't overlap.
+
+# uniq id
+MYID=$HOSTNAME
+# time to sleep until next check of lockfile, in seconds
+SLEEP=60
+# maximum age of lockfile; after this the lock will be removed
+MAXMINUTES=120
+# filename of lock
+LOCKFILE=lock
+# prefix for all messages, which is used to filter the messages out of the buildlogs
+MSGPREFIX="Buildlock: "
+
+# Delete lockfile
+# but check first, if it's (still) our own lockfile.
+cleanup ()
+{
+  echo $MSGPREFIX cleanup
+  test -f $LOCKFILE && head -n 1 $LOCKFILE | grep $MYID > /dev/null && rm $LOCKFILE
+}
+
+trap 'echo $MSGPREFIX caught signal ; cleanup ; exit 1' 1 2 3 13 15
+
+echo $MSGPREFIX Try to obtain lock on `date`
+test -f $LOCKFILE && echo -n $MSGPREFIX && ls -l --full-time $LOCKFILE
+# for ((;;)); do
+while (true); do
+{
+  if test -f $LOCKFILE; then
+  {
+    sleep $SLEEP
+    find $LOCKFILE -mmin +$MAXMINUTES \
+	 -exec echo $MSGPREFIX lock from \"`cat $LOCKFILE`\" expired \; \
+	 -exec rm -f {} \;
+  }
+  else
+  {
+    echo $MYID > $LOCKFILE
+    # check, if we're in the first line of lockfile;
+    # if we're not in the first line, another host was faster
+    # and we have to wait again.
+    head -n 1 $LOCKFILE | grep $MYID > /dev/null || continue
+    echo $MSGPREFIX "Obtained lock on     " `date`
+    break
+  }
+  fi
+}
+done
+
+
 MODULE=sdcc-build
 CVSROOT=:pserver:anonymous@cvs.sdcc.sourceforge.net:/cvsroot/sdcc
 BUILDROOT=$HOME/build
@@ -41,3 +91,4 @@ done
 cd $BUILDROOT/$MODULE
 exec make $MAKEFLAGS crontab-spawn
 
+cleanup
